# storyteller

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: data-curator.agent.md  storyteller.agent.md
.github/skills/digest/: SKILL.md
.github/skills/generate-narrative/: SKILL.md
.github/skills/ingest-data/: SKILL.md
.github/skills/publish-to-github/: SKILL.md
.github/skills/summarize-period/: SKILL.md
.github/skills/weekly-report/: SKILL.md
src/storyteller/: cli.py  config.py  models.py  output.py  publisher.py  timeline.py
src/storyteller/parsers/: __init__.py  calendar.py  copilot_sessions.py  github_repo.py  msg.py  notes.py
tests/: test_parsers.py  test_timeline.py
